fixed text alignment

--- a/assets/css/embedpress-elementor.css
+++ b/assets/css/embedpress-elementor.css
@@ -310,7 +310,7 @@
     width: 100%;
 }
 .embedpress-yt-sub-text {
-    text-align: right;
+    display: inline-block;
 }
 @media only screen and (min-width: 530px) {
     .ep-event--attendees .gridList--autoHeight--has4>.gridList-item {
